# oneDayOneCode

./: .gitignore  LICENSE  README.md  eq.json
2025/: Main.java
2025/06/20250612/: main.java
2025/06/20250613/: main.py  note.txt
2025/06/20250614/: note.txt
2025/06/20250615/: main.c
2025/06/20250616/: readme.md
2025/06/20250617/: note.txt
2025/06/20250618/: main  readme.md
2025/06/20250619/: main  main.c
2025/06/20250620/: readme.md
2025/06/20250621/: main.c  readme.md
2025/06/20250622/: input.txt  readme.md
2025/06/20250623/: Main.java  output.txt  readme.md
2025/06/20250624/: main.py  os_summary.txt
2025/06/20250625/: input.txt  main.c
2025/06/20250626/: Main.java  readme.md
2025/06/20250627/: prototype.py  readme.md
2025/06/20250628/: main.c  readme.md
2025/06/20250629/: error_output.txt  log.txt  main.py  readme.md
2025/06/20250630/: Main.java  readme.md
2025/07/20250701/: input.txt  main  main.c  output.txt  readme.md
2025/07/20250702/: chat_client.py  chat_client_gui.py  chat_server.py  chat_server_gui.py  readme.md  socket_utils.py
2025/07/20250703/: Main.java  phonebook.txt  readme.md
2025/07/20250704/: main  main.c  readme.md
2025/07/20250705/: input.txt  main.py  output.txt  readme.md
2025/07/20250706/: Main.java  employees.csv  readme.md
2025/07/20250707/: main  main.c  readme.md  sorted_students.txt  students.txt
2025/07/20250708/: main.py  output.txt  readme.md
2025/07/20250709/: Main.java  books.csv  borrow.csv  readme.md
2025/07/20250710/: books.txt  main  main.c  readme.md
2025/07/20250711/: main.py  population.csv  readme.md
2025/07/20250712/: Main.java  readme.md  sales.csv
2025/07/20250713/: main  main.c  readme.md  scores.csv
2025/07/20250714/: books.csv  main.py  readme.md
2025/07/20250715/: Main.java  borrow_records.csv  readme.md
2025/07/20250716/: main  main.c  readme.md
2025/07/20250717/: main.py  readme.md
2025/07/20250718/: Main.java  UseStreamAPIVer.java  readme.md  students.csv
2025/07/20250719/: main  main.c  readme.md
2025/07/20250720/: KEN_ALL.csv  main.py  readme.md
2025/07/20250721/: Main.java  readme.md  spots.csv
2025/07/20250722/: main.c  readme.md
2025/07/20250723/: main.py  readme.md
2025/07/20250724/: DBManager.java  MySQLDemo.java  User.java  UserLister.java  UserRegistrar.java  readme.md
2025/07/20250725/: main  main.c  readme.md
2025/07/20250726/: main.py  readme.md
2025/07/20250727/: Main.java  readme.md
2025/07/20250728/: main  main.c  readme.md
2025/07/20250729/: html_analizer.py  main.py  readme.md  web_connector.py
2025/07/20250730/: Main.java  readme.md
2025/07/20250731/: main  main.c  readme.md
2025/08/20250801/: main.py  readme.md
2025/08/20250802/: Main.java  readme.md
2025/08/20250803/: main  main.c  readme.md  sample.txt
2025/08/20250804/: main.py  readme.md
2025/08/20250805/: Main.java  readme.md
2025/08/20250806/: main  main.c
2025/08/20250807/: main.py  readme.md  testcase.xlsx
2025/08/20250808/: Main.java  readme.md
2025/08/20250809/: main  main.c  readme.md
2025/08/20250810/: main.py  putTextJPforOpenCV.py  readme.md
2025/08/20250811/: Main.java  readme.md
2025/08/20250812/: data.csv  main.c  readme.md
2025/08/20250813/: main.py  readme.md  sales.csv
2025/08/20250814/: Main.java  readme.md
2025/08/20250815/: filecopy  main.c  readme.md  test.txt
2025/08/20250816/: main.py  readme.md
2025/08/20250817/: Main.java  readme.md
2025/08/20250818/: main.c
2025/08/202508180/: mycat  readme.md
2025/08/20250819/: main.py  readme.md
2025/08/20250820/: Main.java  TestWavGenerator.java
2025/08/20250821/: main  main.c  readme.md
2025/08/20250822/: main.py  readme.md  sales.csv
20250612/: note.txt  readme.md
20250613/: readme.md
20250614/: Main.java  readme.md
20250615/: main  readme.md
20250616/: Main.java  note.txt
20250617/: main  main.c  readme.md
20250618/: main.c
20250619/: note.txt  readme.md
20250620/: Main.java
20250621/: main
20250622/: Main.java  output.txt
20250623/: input.txt  note.txt
20250624/: readme.md
20250625/: main  note.txt  output.txt  readme.md
20250627/: main.py
20250628/: main  main.c  readme.md
20250629/: warning_output.txt
20250630/: MainImproved.java  note.txt
2026/02/20260204_rust_tutrial2_plugins/plugctl/: Cargo.toml
2026/02/20260204_rust_tutrial2_plugins/plugctl/src/: cli.rs  config.rs  main.rs
2026/05/20260527_python_ros2_Service-Launch-Practice/ws/src/mode_switch_practice/: package.xml  setup.cfg  setup.py
2026/05/20260527_python_ros2_Service-Launch-Practice/ws/src/mode_switch_practice/launch/: mode_switch.launch.py
2026/05/20260527_python_ros2_Service-Launch-Practice/ws/src/mode_switch_practice/src/: mode_client_node.py  mode_manager_node.py
2026/06/2026-06-02_ros2_Xacro-TF-Practice-Sensor-Frame-Simulator/ws/src/xacro_tf_practice/: CMakeLists.txt  package.xml
2026/06/2026-06-02_ros2_Xacro-TF-Practice-Sensor-Frame-Simulator/ws/src/xacro_tf_practice/launch/: sensor_robot.launch.py
2026/06/2026-06-02_ros2_Xacro-TF-Practice-Sensor-Frame-Simulator/ws/src/xacro_tf_practice/src/: target_tf_broadcaster.cpp  target_tf_listener.cpp
2026/06/2026-06-02_ros2_Xacro-TF-Practice-Sensor-Frame-Simulator/ws/src/xacro_tf_practice/xacro/: common_parts.xacro  sensor_robot.xacro
2026/06/2026-06-09_ros2_Lifecycle-Sensor-Node-Practice/ws/src/lifecycle_practice/: CMakeLists.txt  package.xml
2026/06/2026-06-09_ros2_Lifecycle-Sensor-Node-Practice/ws/src/lifecycle_practice/src/: managed_sensor_node.cpp
2026/06/2026-06-30_ros2_Topic-Rate-Monitor/ws/src/topic_rate_monitor/: CMakeLists.txt  package.xml
2026/06/2026-06-30_ros2_Topic-Rate-Monitor/ws/src/topic_rate_monitor/src/: rate_monitor.cpp  sensor_publisher.cpp
2026/20260530_python_Sensor-Alert-Debouncer/: main.py  readme.md
can_ros2_practice/log/: latest_build
can_ros2_practice/src/: speed_monitor_node.cpp
docs/: readme.md
docs/cpp/: winapi_guide-1.md
docs/python/: pyotp_docs.md  pyqt_music_player_assignment.md  pystray.md
(+865 files in other folders)
