<?xml version="1.0"?>
<package format="3">
  <name>mode_switch_practice</name>
  <version>0.0.0</version>
  <description>ROS2 Python service and launch practice package</description>
  <maintainer email="ryukifujita0530@gmail.com">Ruki0530</maintainer>

  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>